Send Email - Messages - Show Verification Code Logic

--- a/SunLoanDelangIntegration/templates/view.html
+++ b/SunLoanDelangIntegration/templates/view.html
@@ -38,14 +38,14 @@
                     Verification Code</a></br>
                 <form class="form-inline" action="/verify/?customer_id={{ customer.id }}" method="post" id="ver_code">
                     {% csrf_token %}
-                    {% if customer.notification_setting_id == 2 or customer.notification_setting_id == 4 %}
+                        {% if show_sms_code == True %}
                         <input type="text" size="8" placeholder="SMS Code" class="form-control" name="sms_code">
                     {% endif %}
-                    {% if customer.notification_setting_id == 3 or customer.notification_setting_id == 4 %}
+                    {% if show_email_code == True %}
                         <input type="text" size="8" placeholder="Email Code" class="form-control" name="email_code">
                     {% endif %}
                     <input class="btn btn-primary" href="#" id="verify" type="submit"
-                           value="Verify Customer">&nbsp;{{ request.GET.validated }}
+                           value="Verify Customer"><br><font color="red">{{ request.GET.validated }}</font>
                 </form>
             {% endif %}
             <a class="btn btn-primary" href="/" role="button" id="reload">Cancel &raquo;</a>
