Added Font Awesome Tags - Added Ticketing/Bug Reporting - Modified Logout Icon

--- a/SunLoanDelangIntegration/templates/base.html
+++ b/SunLoanDelangIntegration/templates/base.html
@@ -15,7 +15,7 @@
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="https://maxcdn.bootstrapcdn.com/js/ie10-viewport-bug-workaround.js" rel="stylesheet">
-
+    <script src="https://use.fontawesome.com/4b8e661c5b.js"></script>
     {% load staticfiles %}
     <!-- Custom styles for this template -->
     <link href="{% static "jumbotron.css" %}" rel="stylesheet">
@@ -117,7 +117,7 @@
         if (error != null) {
             $("#add").click()
         }
-    }
+    };
     function getUrlVars() {
         var vars = [], hash;
         var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
