--- a/SunLoanDelangIntegration/templates/nav.html
+++ b/SunLoanDelangIntegration/templates/nav.html
@@ -8,8 +8,8 @@
                 <span class="icon-bar"></span>
             </button>
             {% if user.is_authenticated %}
-                <a href="/"><p class="navbar-brand">Welcome, {{ user.username }}</a>
-                <a href="accounts/logout/">[Logout]</a>
+                <a href="/"><p class="navbar-brand">Welcome, {{ user.username }}</a><br>
+                <a href="accounts/logout/"><i class="fa fa-sign-out" aria-hidden="true">&nbsp;Sign Out</i></a>
 
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -37,9 +37,8 @@
         </div>
         <div id="navbar" class="navbar-brand navbar-collapse collapse navbar-right">
             <p>Store: {{ employee.store }} </br></br>
-                 <button type="button" id="feedback-btn" class="btn btn-info vertical-right-aligned">
-                                    Feedback <span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>
-                                </button>
+                 <a href="/admin/bugtracker/ticket/add/"> <i class="fa fa-bug" aria-hidden="true"></i></a></span>
+
             </p>
         </div><!--/.navbar-collapse -->
     </div>
