--- a/SunLoanDelangIntegration/templates/nav.html
+++ b/SunLoanDelangIntegration/templates/nav.html
@@ -8,8 +8,8 @@
                 <span class="icon-bar"></span>
             </button>
             {% if user.is_authenticated %}
-                <a href="/"><p class="navbar-brand">Welcome, {{ user.username }}</a><br>
-                <a href="accounts/logout/"><i class="fa fa-sign-out" aria-hidden="true">&nbsp;Sign Out</i></a>
+                <a href="/"><p class="navbar-brand">Welcome, {{ user.username }}</a>&nbsp;&nbsp;
+                <a href="accounts/logout/"><i class="fa fa-sign-out" aria-hidden="true" title="Log Out"></i></a>
 
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -37,7 +37,9 @@
         </div>
         <div id="navbar" class="navbar-brand navbar-collapse collapse navbar-right">
             <p>Store: {{ employee.store }} </br></br>
-                 <a href="/admin/bugtracker/ticket/add/"> <i class="fa fa-bug" aria-hidden="true"></i></a></span>
+                 <a href="/admin/bugtracker/ticket/add/"> <i class="fa fa-bug" aria-hidden="true" title="Report Bug or New Feature"></i></a>&nbsp;&nbsp;
+                    <a href="/admin/bugtracker/ticket/"><i class="fa fa-list" aria-hidden="true" title="View Bugs/Features List"></i>
+</a>
 
             </p>
         </div><!--/.navbar-collapse -->
